# substrate-verifiable-credentials

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: lib.rs  verifiablecreds.rs
runtime/wasm/: Cargo.toml
src/: chain_spec.rs  main.rs
